2008-03-30  Philipp SCHIEFERDECKER  <philipp.schieferdecker@cern.ch>

	* tag V00-22-03
	* critical fix regarding the import of paths and sequences!
		
2008-03-30  Philipp Schieferdecker  <philipp.schieferdecker@cern.ch>

	* tag V00-22-02
	* improved diff, added streams & datasets
	* bug fix: 'OK' button disabled while editing new directory name
	in tree

2008-03-28  Philipp SCHIEFERDECKER  <philipp.schieferdecker@cern.ch>

	* tag V00-22-01
	* unlock parser for everybody, add problem dialog
	* fix to InputTag propagation (ModuleInstance)

2008-03-27  Philipp SCHIEFERDECKER  <philipp.schieferdecker@cern.ch>

	* tag V00-22-00
	* fixes to diff, mostly regarding parameters (+endpath)
	* new stream/dataset schema (-> OfflineConverter!)
	* critical parser fix, regarding nested PSets

2008-03-20  Philipp SCHIEFERDECKER  <philipp.schieferdecker@cern.ch>

	* tag V00-21-03
	* fixed diff
	* replace migration report with diff dialog
	* ConfDB.reconnect()
	* [V]PSetParameter.setValue()
	

2008-03-16  Philipp SCHIEFERDECKER  <philipp.schieferdecker@cern.ch>

	* tag V00-21-02
	* fixed '--output' interpretation 

2008-03-12  Philipp SCHIEFERDECKER  <philipp.schieferdecker@cern.ch>

	* tag V00-21-01
	* gui: add DiffDialog

2008-03-07  Philipp SCHIEFERDECKER  <philipp.schieferdecker@cern.ch>

	* tag V00-21-00
	* parser: serious bug fix!
	* gui: import modules/instances

2008-03-06  Philipp SCHIEFERDECKER  <philipp.schieferdecker@cern.ch>

	* tag V00-20-06
	* converter: don't pass empty streams to SM
	* converter: revert back to maximum file size in bytes
	* gui: resolve unnecessary sequences feature

2008-03-05  Philipp SCHIEFERDECKER  <philipp.schieferdecker@cern.ch>

	* tag V00-20-05
	* remove debug statements from configuration tree model

2008-03-05  Philipp SCHIEFERDECKER  <philipp.schieferdecker@cern.ch>

	* tag V00-20-04
	* turns out V00-20-01--V00-20-03 don't exist ...
	* converter: add rcms properties
	* gui: fine-tuning of import (missing: modules!)
